--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "DegNorm"]
+	path = DegNorm
+	url = https://github.com/jipingw/degnorm
+	shallow = true
+	registered = true
